<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvPriceLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/priceLabel"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvDescLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/item_description"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>